# smart-notes-assistant

./: .gitignore  DEPLOYMENT.md  LICENSE  LOCAL-GCP-DEVELOPMENT.md  Makefile  README.md  docker-compose.yml  gcp-config.yaml  gcp-setup.md  pyproject.toml
.github/workflows/: ci.yaml  gcp-deploy.yaml
apps/api/ai-service/: Dockerfile
apps/api/ai-service/app/: main.py
apps/api/notes-service/: Dockerfile
apps/api/notes-service/app/: database.py  main.py  models.py  routes.py  schemas.py
apps/api/search-service/: Dockerfile
apps/api/search-service/app/: database.py  main.py  routes.py
apps/api/shared/: database.py  embeddings.py  rag.py  search.py
apps/api/tasks-service/: Dockerfile
apps/api/tasks-service/app/: database.py  main.py  models.py  routes.py  schemas.py
apps/api/user-service/: Dockerfile
apps/api/user-service/app/: auth.py  database.py  main.py  models.py  routes.py  schemas.py
apps/web/: Dockerfile  rxconfig.py  web.py
apps/web/src/components/: auth_modal.py  header.py  note_modal.py  notes_section.py  search_interface.py  task_modal.py  tasks_section.py
apps/web/src/pages/: conversational_interface.py  create_note.py  create_task.py  edit_note.py  edit_task.py  login.py  notes_list.py  register.py  tasks_list.py  view_note.py
apps/web/src/state/: main_state.py  notes_state.py  search_state.py  tasks_state.py
gcp/cloud-run/: ai-service.yaml  notes-service.yaml  tasks-service.yaml  user-service.yaml
gcp/load-balancer/: backend-config.yaml
gcp/monitoring/: monitoring-config.yaml
scripts/: build-and-deploy.sh  check-gcp-dev.sh  gcp-setup.sh  setup-dev.sh  setup-load-balancer.sh  setup-local-gcp.sh  setup-monitoring.sh  setup-pgvector.py  setup-pgvector.sql  start-cloud-sql-proxy.sh
